--- a/flower.ipynb
+++ b/flower.ipynb
@@ -28,8 +28,7 @@
         "cuda_output = !ldconfig -p|grep cudart.so|sed -e 's/.*\\.\\([0-9]*\\)\\.\\([0-9]*\\)$/cu\\1\\2/'\n",
         "accelerator = cuda_output[0] if exists('/dev/nvidia0') else 'cpu'\n",
         "\n",
-        "!pip install -q http://download.pytorch.org/whl/{accelerator}/torch-0.4.1-{platform}-linux_x86_64.whl torchvision\n",
-        "import torch"
+        "!pip install -q http://download.pytorch.org/whl/{accelerator}/torch-0.4.1-{platform}-linux_x86_64.whl torchvision"
       ],
       "execution_count": 0,
       "outputs": []
@@ -44,6 +43,11 @@
       "source": [
         "import torch\n",
         "import numpy as np\n",
+        "from torch import nn\n",
+        "from torch import optim\n",
+        "import torch.nn.functional as F\n",
+        "from torchvision import datasets, transforms, models\n",
+        "from torch.utils.data.sampler import SubsetRandomSampler\n",
         "\n",
         "train_on_gpu = torch.cuda.is_available()\n",
         "\n",
@@ -67,23 +71,6 @@
         "!pip install Pillow==5.3.0\n",
         "import PIL\n",
         "print(PIL.PILLOW_VERSION)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fbShe2vu8O-M",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from torch import nn\n",
-        "from torch import optim\n",
-        "import torch.nn.functional as F\n",
-        "from torchvision import datasets, transforms, models\n",
-        "from torch.utils.data.sampler import SubsetRandomSampler"
       ],
       "execution_count": 0,
       "outputs": []
@@ -190,7 +177,7 @@
         }
       },
       "source": [
-        "# Build and train your network\n",
+        "# Build the network\n",
         "model = models.densenet121(pretrained=True)\n",
         "model"
       ],
@@ -1319,7 +1306,7 @@
         "\n",
         "    for images, labels in iter(train_loader):\n",
         "\n",
-        "        images, labels = images.to(device), labels.to(device) # Move input and label tensors to the GPU\n",
+        "        images, labels = images.to(device), labels.to(device) # Move input & label tensors to the GPU\n",
         "\n",
         "        steps += 1\n",
         "        optimizer.zero_grad()\n",
