--- a/flower.ipynb
+++ b/flower.ipynb
@@ -100,6 +100,7 @@
         "colab": {}
       },
       "source": [
+        "# Define path to directory\n",
         "data_dir = '/flower_data'\n",
         "train_dir = data_dir + '/train'\n",
         "valid_dir = data_dir + '/valid'"
@@ -1273,7 +1274,7 @@
         "            output = model.forward(images)\n",
         "            loss += criterion(output, labels).item()\n",
         "\n",
-        "            ps = torch.exp(output) # get the class probabilities from log-softmax\n",
+        "            ps = torch.exp(output) # Get the class probabilities from log-softmax\n",
         "            equality = (labels.data == ps.max(dim=1)[1])\n",
         "            accuracy += equality.type(torch.FloatTensor).mean()\n",
         "    \n",
