--- a/flower.ipynb
+++ b/flower.ipynb
@@ -1269,7 +1269,7 @@
         "    with torch.no_grad():\n",
         "        for images, labels in iter(dataloader):\n",
         "            \n",
-        "            images, labels = images.to(device), labels.to(device) # Move input and label tensors to the GPU\n",
+        "            images, labels = images.to(device), labels.to(device) # Move input & label tensors to the GPU\n",
         "            \n",
         "            output = model.forward(images)\n",
         "            loss += criterion(output, labels).item()\n",
@@ -1307,7 +1307,7 @@
         "\n",
         "    for images, labels in iter(train_loader):\n",
         "\n",
-        "        images, labels = images.to(device), labels.to(device) # Move input & label tensors to the GPU\n",
+        "        images, labels = images.to(device), labels.to(device)\n",
         "\n",
         "        steps += 1\n",
         "        optimizer.zero_grad()\n",
